--- a/bitrise.yml
+++ b/bitrise.yml
@@ -122,7 +122,7 @@ workflows:
             export CI=true
 
             releaseman create-changelog \
-              --version $STEP_VERSION \
+              --version $STEP_VERSION 
 
   # ----------------------------------------------------------------
   # --- workflows to Share this step into a Step Library
